[gd_scene load_steps=4 format=3 uid="uid://r85c3ceisq0f"]

[ext_resource type="PackedScene" uid="uid://cq6yx2mr1jebo" path="res://scenes/ElementDisplay.tscn" id="1_e8owc"]
[ext_resource type="Script" path="res://scripts/ProximityElementDisplay.gd" id="1_r7x67"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rllne"]
radius = 250.0

[node name="ProximityElementDisplay" type="Node2D"]
script = ExtResource("1_r7x67")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_rllne")

[node name="ElementDisplay" parent="." instance=ExtResource("1_e8owc")]
offset_left = -118.0
offset_top = -152.0
offset_right = 122.0
offset_bottom = -52.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
